codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3436
expression: popup
---
  Enable multi-agent?
  Multi-agent is currently disabled in your config.

› 1. Yes, enable  Save the setting now. You will need a new session to use it.
  2. Not now      Keep multi-agent disabled.

  Press enter to confirm or esc to go back
