codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 5331
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

  ↳ Queued while /review is running.
    ⌥ + ↑ edit

› Ask Codex to do anything

  gpt-5.2-codex · 100% left · ~/Workspace/codey/codex-rs/tui
